# lumberyard

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  bootstrap_config.json
.github/ISSUE_TEMPLATE/: bug_report.md
dev/: .p4ignore  AssetProcessorPlatformConfig.ini  BeachCity-ReadMe.txt  BuildDBAs.bat  BuildFeatureTests_Paks_iOS.bat  BuildMultiplayerSample_Paks_PC.bat  BuildMultiplayerSample_Paks_PC_dedicated.bat  BuildReleaseAuxiliaryContent.py  BuildSamplesProject_Paks_PC.bat  BuildSamplesProject_Paks_iOS.bat  BuildShaderPak_DX11.bat  BuildShaderPak_ES3.bat  BuildShaderPak_ES3.sh  BuildShaderPak_GL4.bat  BuildShaderPak_Metal.bat  BuildShaderPak_Metal.sh  Build_AssetBundler_AuxiliaryContent_PC.bat  DetermineRCandAP.bat  LyzardConfig.xml  MultiplayerSample_CreateGameLiftPackage.sh  MultiplayerSample_LinuxPacker.bat  ProjectConfiguratorConfig.xml  SetupAssistantConfig.json  UserSettings.xml  bootstrap.cfg  editor.cfg  engine.json  external_manifest.txt  lmbr_aws.cmd  lmbr_pak_shaders.bat  lmbr_pak_shaders.sh  lmbr_test.cmd  lmbr_test.sh  lmbr_test_blacklist.txt  lmbr_test_pytest.ini  lmbr_waf.bat  lmbr_waf.sh  shadercachegen.cfg  system_android_es3.cfg  system_appletv_ios.cfg  (+9 more)
dev/Cache/StarterGame/: package_mark.txt
dev/CloudGemDefectReportSample/: game.cfg  gems.json  project.json
dev/CloudGemDefectReportSample/AWS/: local-project-settings.json
dev/CloudGemDefectReportSample/CloudCanvas/: defect_reporter_server_names.txt
dev/CloudGemDefectReportSample/Config/: Editor.xml  game.xml
dev/CloudGemDefectReportSample/Gem/: gem.json
dev/CloudGemDefectReportSample/Scripts/: util.lua
dev/CloudGemDefectReportSample/WAFSpec/: CloudGemDefectReportSample.json
dev/CloudGemSamples/: .p4ignore  canvas_metrics.mtl  game.cfg  gems.json  project.json
dev/CloudGemSamples/AWS/: local-project-settings.json
dev/CloudGemSamples/Animations/: skeletonlist.xml
dev/CloudGemSamples/Config/: Editor.xml  Game.xml
dev/CloudGemSamples/Gem/: gem.json
dev/CloudGemSamples/Objects/: wscript
dev/CloudGemSamples/Scripts/: AWSBehaviorAPITest.lua  AWSBehaviorHTTPTest.lua  AWSBehaviorJSONTest.lua  AWSBehaviorLambdaTest.lua  AWSBehaviorNodesTest.lua  AWSBehaviorS3DownloadTest.lua  AWSBehaviorS3PresignTest.lua  AWSBehaviorS3UploadTest.lua  AWSBehaviorURLDecodeTest.lua  AWSMapTest.lua  CommunicatorSample.lua  DynamicContentTest.lua  HttpClientUsageExample.lua  LambdaLanguageDemo.lua  LeaderboardAccountUtils.lua  MetricsMainMenu.lua  PressButtonOnActivate.lua  asyncresult.lua  leaderboardDedicated.lua  leaderboardmainmenu.lua  motdmainmenu.lua  pollyrequester.lua  showcursor.lua  surveymenu.lua  surveymenufromentity.lua  surveytrigger.lua  texttospeechclosedcaption.lua  turnonmouse.lua  util.lua
dev/Code/: wscript
dev/Code/CloudGemSamples/: wscript
dev/Code/CryEngine/: wscript
dev/Code/CryEngine/RenderDll/XRenderNULL/: CMakeLists.txt  CRELensOpticsNULL.cpp  NULLRenderAuxGeom.cpp  NULLRenderAuxGeom.h  NULL_DevBuffer.cpp  NULL_Font.cpp  NULL_PostProcess.cpp  NULL_RERender.cpp  NULL_RendPipeline.cpp  NULL_Renderer.cpp  NULL_Renderer.h  NULL_Shaders.cpp  NULL_Shadows.cpp  NULL_System.cpp  NULL_Textures.cpp  NULL_TexturesStreaming.cpp  core_null_renderer.waf_files  core_null_renderer_test.waf_files  wscript
dev/Code/CryEngine/RenderDll/XRenderNULL/Tests/: test_Main.cpp
dev/Code/Deprecated/: readme.txt
dev/Code/FeatureTests/: .p4ignore
dev/Code/Framework/: wscript
dev/Code/Launcher/: LumberyardLauncher.h  wscript
dev/Code/LauncherUnified/: Launcher.cpp  Launcher.h  Launcher_precompiled.cpp  Launcher_precompiled.h  TestLauncher.cpp  launcher.waf_files  launcher_test.waf_files  tool_launcher.waf_files  wscript
dev/Code/NetworkFeatureTest/: wscript
dev/Code/Sandbox/: wscript
dev/Code/StarterGame/: wscript
dev/Code/Tools/: sdl.waf_files  sdl_android.waf_files  wscript
dev/Code/Tools/HLSLCrossCompiler/mk/: CMakeLists.txt  build.py  build_linux_all.py  build_win_all.py  iOS.cmake  rsc_version.txt
dev/Editor/: EditorParticlePanels.xml  EditorParticlePanelsDefault.xml  LevelTemplates.xml  default_time_of_day.xml  editoreventlog.xml  editorlayout.xml
dev/Editor/Objects/: mtlobjects.mtl
dev/Editor/Scripts/: environmentmodes.py  export_all_levels.py  generatelod.py  rename_cgf.py  select_story_anim_objects.py  tools_shelf_actions.py  viewmodes.py
dev/Editor/Styles/: EditorStylesheetVariables_Light.json  stylesheet_Dark.qss  stylesheet_Light.qss
dev/Editor/UI/: Resource.h  WipFeatures.xml
dev/Empty/: game.cfg  gems.json  project.json
dev/Empty/Config/: Editor.xml  Game.xml
dev/Empty/Gem/: gem.json
dev/Empty/WAFSpec/: Empty.json
dev/Engine/: Engine_Dependencies.xml  wscript
dev/Engine/Config/: highspec.cfg  ios.cfg  lowspec.cfg  medspec.cfg  osx_metal.cfg  veryhighspec.cfg
dev/Engine/EngineAssets/: defaulttextures.xml
dev/Engine/Entities/: AnimObject.ent  AreaSolid.ent  AreaTrigger.ent  AudioAreaEntity.ent  Comment.ent  FogVolume.ent  RigidBody.ent  SmartObject.ent  UiCanvasRef.ent
dev/Engine/Scripts/: EngineCommon.lua
dev/Engine/Shaders/: CMakeLists.txt  Shaders.sln  hwscripts.waf_files  wscript
dev/Gems/AWS/: gem.json
dev/Gems/AssetImporterConfig/: gem.json
dev/Gems/Boids/: gem.json
dev/Gems/Camera/: gem.json
dev/Gems/CertificateManager/: gem.json
dev/Gems/CloudCanvasCommon/: gem.json
dev/Gems/CloudGemAWSScriptBehaviors/: gem.json
dev/Gems/CloudGemDynamicContent/: gem.json
dev/Gems/CloudGemInGameSurvey/: CloudGemInGameSurvey.pyproj  gem.json
dev/Gems/CloudGemLeaderboard/: gem.json
dev/Gems/CloudGemLex/: gem.json
dev/Gems/CloudGemMessageOfTheDay/: gem.json
dev/Gems/CloudGemPlayerAccount/: gem.json
dev/Gems/CloudGemSpeechRecognition/: gem.json
dev/Gems/CloudGemTextToSpeech/: gem.json
dev/LRV/: game.cfg  gems.json  project.json
dev/ProjectTemplates/: TemplateListForMetrics.json
dev/SessionStatus/: editor_statuses.json
dev/StarterGame/: .p4ignore  AssetBundlerConfig.json  autoexec.cfg  game.cfg  gems.json  project.json
dev/Tools/: 7za_legal_notice.txt
dev/_WAF_/: default_settings.json  environment.json
(+23985 files in other folders)
